Finish HTML/CSS design.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
+
+<div class="main-calculator">
+    <div class ="output">0</div>
+    <button class="all-clear spanned">AC</button>
+    <button class="delete">DEL</button>
+    <button class="other-buttons">÷</button>
+    <button class="other-buttons">7</button>
+    <button class="other-buttons">8</button>
+    <button class="other-buttons">9</button>
+    <button class="other-buttons">×</button>
+    <button class="other-buttons">4</button>
+    <button class="other-buttons">5</button>
+    <button class="other-buttons">6</button>
+    <button class="other-buttons">+</button>
+    <button class="other-buttons">1</button>
+    <button class="other-buttons">2</button>
+    <button class="other-buttons">3</button>
+    <button class="other-buttons">-</button>
+    <button class="other-buttons">.</button>
+    <button class="other-buttons">0</button>
+    <button class="equals spanned">=</button>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
