Change calculator layout and add spanned class to 0.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <button class="other-buttons">2</button>
     <button class="other-buttons">3</button>
     <button class="other-buttons">-</button>
+    <button class="other-buttons spanned">0</button>
     <button class="other-buttons">.</button>
-    <button class="other-buttons">0</button>
-    <button class="equals spanned">=</button>
+    <button class="equals">=</button>
 </div>
 
 <script src="script.js"></script>
