Replace and add new classes to buttons for CSS.

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <div class ="output">0</div>
     <button class="all-clear spanned">AC</button>
     <button class="delete">DEL</button>
-    <button class="other-buttons">÷</button>
-    <button class="other-buttons">7</button>
-    <button class="other-buttons">8</button>
-    <button class="other-buttons">9</button>
-    <button class="other-buttons">×</button>
-    <button class="other-buttons">4</button>
-    <button class="other-buttons">5</button>
-    <button class="other-buttons">6</button>
-    <button class="other-buttons">+</button>
-    <button class="other-buttons">1</button>
-    <button class="other-buttons">2</button>
-    <button class="other-buttons">3</button>
-    <button class="other-buttons">-</button>
-    <button class="other-buttons spanned">0</button>
-    <button class="other-buttons">.</button>
+    <button class="operators">÷</button>
+    <button class="number-buttons">7</button>
+    <button class="number-buttons">8</button>
+    <button class="number-buttons">9</button>
+    <button class="operators">×</button>
+    <button class="number-buttons">4</button>
+    <button class="number-buttons">5</button>
+    <button class="number-buttons">6</button>
+    <button class="operators">+</button>
+    <button class="number-buttons">1</button>
+    <button class="number-buttons">2</button>
+    <button class="number-buttons">3</button>
+    <button class="operators">-</button>
+    <button class="number-buttons spanned">0</button>
+    <button class="number-buttons">.</button>
     <button class="equals">=</button>
 </div>
 
