Add data attributes for JS file.

--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 <body>
 
 <div class="main-calculator">
-    <div class ="output">0</div>
-    <button class="all-clear spanned">AC</button>
-    <button class="delete">DEL</button>
-    <button class="operators">÷</button>
-    <button class="number-buttons">7</button>
-    <button class="number-buttons">8</button>
-    <button class="number-buttons">9</button>
-    <button class="operators">×</button>
-    <button class="number-buttons">4</button>
-    <button class="number-buttons">5</button>
-    <button class="number-buttons">6</button>
-    <button class="operators">+</button>
-    <button class="number-buttons">1</button>
-    <button class="number-buttons">2</button>
-    <button class="number-buttons">3</button>
-    <button class="operators">-</button>
-    <button class="number-buttons spanned">0</button>
-    <button class="number-buttons">.</button>
-    <button class="equals">=</button>
+    <div class ="output" data-output>0</div>
+    <button class="all-clear spanned" data-all-clear>AC</button>
+    <button class="delete" data-delete>DEL</button>
+    <button class="operators" data-operator>÷</button>
+    <button class="number-buttons" data-number>7</button>
+    <button class="number-buttons" data-number>8</button>
+    <button class="number-buttons" data-number>9</button>
+    <button class="operators" data-operator>×</button>
+    <button class="number-buttons" data-number>4</button>
+    <button class="number-buttons" data-number>5</button>
+    <button class="number-buttons" data-number>6</button>
+    <button class="operators" data-operator>+</button>
+    <button class="number-buttons" data-number>3</button>
+    <button class="number-buttons" data-number>1</button>
+    <button class="number-buttons" data-number>2</button>
+    <button class="operators" data-operator>-</button>
+    <button class="number-buttons spanned" data-number>0</button>
+    <button class="number-buttons" data-point>.</button>
+    <button class="equals" data-equals>=</button>
 </div>
 
 <script src="script.js"></script>
