Add percent button.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <div class="main-calculator">
     <div class ="output" data-output>0</div>
-    <button class="all-clear spanned" data-all-clear>AC</button>
+    <button class="all-clear" data-all-clear>AC</button>
     <button class="delete" data-delete>DEL</button>
+    <button class="percent" data-percent>%</button>
     <button class="operators" data-operator>÷</button>
     <button class="number-buttons" data-number>7</button>
     <button class="number-buttons" data-number>8</button>
