--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
     <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
+    <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
+        </label>
+        <em class="em-message">Dark mode</em>
+    </div>
 
-<div class="main-calculator">
-    <div class ="output" data-output>0</div>
-    <button class="light-gray" data-all-clear>AC</button>
-    <button class="light-gray" data-delete>DEL</button>
-    <button class="light-gray" data-percent>%</button>
-    <button class="operators" data-operator>÷</button>
-    <button class="number-buttons" data-number>7</button>
-    <button class="number-buttons" data-number>8</button>
-    <button class="number-buttons" data-number>9</button>
-    <button class="operators" data-operator>×</button>
-    <button class="number-buttons" data-number>4</button>
-    <button class="number-buttons" data-number>5</button>
-    <button class="number-buttons" data-number>6</button>
-    <button class="operators" data-operator>+</button>
-    <button class="number-buttons" data-number>1</button>
-    <button class="number-buttons" data-number>2</button>
-    <button class="number-buttons" data-number>3</button>
-    <button class="operators" data-operator>-</button>
-    <button class="number-buttons spanned" data-number>0</button>
-    <button class="number-buttons" data-point>.</button>
-    <button class="equals" data-equals>=</button>
-</div>
+    <div class="main-calculator">
+        <div class="output" data-output>0</div>
+        <button class="light-gray" data-all-clear>AC</button>
+        <button class="light-gray" data-delete>DEL</button>
+        <button class="light-gray" data-percent>%</button>
+        <button class="operators" data-operator>÷</button>
+        <button class="number-buttons" data-number>7</button>
+        <button class="number-buttons" data-number>8</button>
+        <button class="number-buttons" data-number>9</button>
+        <button class="operators" data-operator>×</button>
+        <button class="number-buttons" data-number>4</button>
+        <button class="number-buttons" data-number>5</button>
+        <button class="number-buttons" data-number>6</button>
+        <button class="operators" data-operator>+</button>
+        <button class="number-buttons" data-number>1</button>
+        <button class="number-buttons" data-number>2</button>
+        <button class="number-buttons" data-number>3</button>
+        <button class="operators" data-operator>-</button>
+        <button class="number-buttons spanned" data-number>0</button>
+        <button class="number-buttons" data-point>.</button>
+        <button class="equals" data-equals>=</button>
+    </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
